assets/css/style.css
/* ... */
.button__outline:hover, .button-tertiary:hover, .button-secondary:hover, .button:hover,
.button__outline:focus, .button-tertiary:focus, .button-secondary:focus, .button:focus {
  color: #fff;
  text-decoration: none;
  background-color: #07565a;
}
.button__outline:active, .button-tertiary:active, .button-secondary:active, .button:active {
  top: 1px;
}

.button-secondary {
  background-color: #85144B;
}
.button-secondary:hover {
  background-color: #590d32;
}
.button-tertiary {
  background-color: #aaa;
}
.button-tertiary:hover {
  background-color: #919191;
}

.button__outline {
  background-color: transparent;
  border: 3px solid #0a838a;
  color: #0a838a;
}
.button__outline:hover {
  background-color: #0a838a;
  color: #fff;
}

/***************
TABLE STYLES
***************/
table {
  width: 100%;
  border: 1px solid #d0d0d0;
  margin-bottom: 1.5em;
}
table caption {
  margin: 0 0 7px;
  font-size: 0.75em;
  color: #aaa;
  text-transform: uppercase;
  letter-spacing: 1px;
}

tr {
  border-bottom: 1px solid #d0d0d0;
}
tr:nth-child(even) {
  background-color: #f7f7f7;
}

td {
  padding: 7px;
  border-right: 1px solid #d0d0d0;
}
td:last-child {
  border-right: 0;
}

th {
  background-color: #f7f7f7;
  border-bottom: 1px solid #d0d0d0;
  border-right: 1px solid #d0d0d0;
}
th:last-child {
  border-right: 0;
}

/***************
  Darkly Pygments Theme
  (c) 2014 Sourcey
  http://sourcey.com
***************/
.highlight {
  white-space: pre;
  overflow: auto;
  word-wrap: normal;
  border-radius: 3px;
  padding: 20px;
  background: #343642;
  color: #C1C2C3;
}
.highlight .hll { background-color: #ffc; }
.highlight .gd { color: #2e3436; background-color: #0e1416; }
.highlight .gr { color: #eeeeec; background-color: #c00; }
.highlight .gi { color: #babdb6; background-color: #1f2b2d; }
.highlight .go { color: #2c3032; background-color: #2c3032; }
.highlight .kt { color: #e3e7df; }
.highlight .ni { color: #888a85; }
.highlight .c, .highlight .cm, .highlight .c1, .highlight .cs { color: #8D9684; }
.highlight .err, .highlight .g, .highlight .l, .highlight .n, .highlight .x, .highlight .p, .highlight .ge,
.highlight .gp, .highlight .gs, .highlight .gt, .highlight .ld, .highlight .s, .highlight .nc, .highlight .nd,
.highlight .ne, .highlight .nl, .highlight .nn, .highlight .nx, .highlight .py, .highlight .ow, .highlight .w, .highlight .sb,
.highlight .sc, .highlight .sd, .highlight .s2, .highlight .se, .highlight .sh, .highlight .si, .highlight .sx, .highlight .sr,
.highlight .s1, .highlight .ss, .highlight .bp { color: #C1C2C3; }
.highlight .k, .highlight .kc, .highlight .kd, .highlight .kn, .highlight .kp, .highlight .kr,
.highlight .nt { color: #729fcf; }
.highlight .cp, .highlight .gh, .highlight .gu, .highlight .na, .highlight .nf { color: #E9A94B; }
.highlight .m, .highlight .nb, .highlight .no, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .mo,
.highlight .il { color: #8ae234; }
.highlight .o { color: #989DAA; }
.highlight .nv, .highlight .vc, .highlight .vg, .highlight .vi { color: #fff; }

/***************
TYPOGRAPHY
***************/
body {
  font-size: 1em;
  line-height: 1.45;
}
body .intro {
  font-size: 1.25em;
  line-height: 1.7;
}

@media (min-width: 43.75em) {
  body {
    font-size: 1em;
    line-height: 1.375;
  }
}

h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
  margin: 0.5rem 0 1.5rem;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
}

h1, .h1 { font-size: 2em; line-height: 1.25; }
@media (min-width: 43.75em) { h1, .h1 { font-size: 2.5em; line-height: 1.125; } }
@media (min-width: 56.25em) { h1, .h1 { font-size: 3em; line-height: 1.05; } }

h2, .h2 { font-size: 1.625em; line-height: 1.15384615; }
@media (min-width: 43.75em) { h2, .h2 { font-size: 2em; line-height: 1.25; } }
@media (min-width: 56.25em) { h2, .h2 { font-size: 2.25em; line-height: 1.25; } }

h3, .h3 { font-size: 1.375em; line-height: 1.13636364; }
@media (min-width: 43.75em) { h3, .h3 { font-size: 1.5em; line-height: 1.25; } }
@media (min-width: 56.25em) { h3, .h3 { font-size: 1.75em; line-height: 1.25; } }

h4, .h4 { font-size: 1.125em; line-height: 1.11111111; }
@media (min-width: 43.75em) { h4, .h4 { line-height: 1.22222222; } }

blockquote {
  font-size: 1.25em;
  line-height: 1.25;
  padding: 0;
}
@media (min-width: 43.75em) {
  blockquote { font-size: 1.5em; line-height: 1.45833333; }
}

.clearfix::after {
  content: "";
  display: block;
  clear: both;
}

/***************
GLOBAL STYLES
***************/
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  font-family: "PT Serif", Georgia, Times, serif;
  line-height: 1.75;
  font-size: 112.5%;
  color: #111;
  overflow-x: hidden;
}
body p, body ul {
  margin: 0 0 2rem;
}

::-moz-selection {
  background: #0a838a;
  color: white;
}
::selection {
  background: #0a838a;
  color: white;
}

img, video, audio, iframe, object {
  max-width: 100%;
}

.container {
  max-width: 610px;
  margin-left: auto;
  margin-right: auto;
  padding: 0 20px;
}

/***************
LINK STYLING
***************/
a {
  color: #0a838a;
}
a:hover {
  color: #053f43;
}

/***************
MENU STYLING
***************/
.nav-collapse {
  z-index: 1;
}
.nav-collapse ul {
  margin: 0;
  padding: 0;
  width: 100%;
  display: block;
  list-style: none;
}
.nav-collapse ul li {
  width: 100%;
  display: block;
  background: seagreen;
  border-bottom: 2px solid #349e63;
}
.nav-collapse ul li a {
  color: white;
  text-decoration: none;
  display: block;
  padding: 5px 2rem;
}

.nav-collapse {
  max-height: 0;
  overflow: hidden;
  clear: both;
  width: 100%;
  transition: max-height 0.3s ease;
}

.nav-collapse.opened {
  max-height: 9999px;
}
/* ... */

